options container now scales with screensize and fixed overlap on 1080p screens

--- a/procedural-generation/index.css
+++ b/procedural-generation/index.css
@@ -176,7 +176,11 @@ button[data-tooltip]:hover::after {
 
 
 @media only screen and (max-width: 2400px) {
+    #optionsContainer {
+        width: 27%;
+    }
+
     #tileInfoContainer {
-        width: 30%;
+        width: 27%;
     }
 }
